<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:stretchColumns="1"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TableRow>
    <TextView
        android:id="@+id/tvName"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/fullname"/>

    <EditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvName"
        android:hint="@string/fullname"
        android:inputType="text"
        android:padding="10dp"/>
    </TableRow>

    <TableRow>
    <TextView
        android:id="@+id/tvAddress"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtName"
        android:text="@string/address"/>

    <EditText
        android:id="@+id/edtAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address"
        android:layout_below="@id/tvAddress"
        android:inputType="text"
        android:padding="10dp"/>
    </TableRow>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/register"/>
</TableLayout>